<resources>
    <string name="app_name">SkiBuddy</string>
    <string name="appId">719503558183833</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_menu">Menu</string>
    <string name="title_activity_second">secondActivity</string>
    <string name="users_FirstName">First Name: </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="drawer_items">
        <item>Create Event</item>
        <item>Invitations</item>
        <item>Records</item>
        <item>Logout</item>
    </string-array>
        <string name="events">My Events</string>
    <string name="new_events">Create an Event</string>
    <string name="detailedEvents">Event Detail</string>
    <string name="title_activity_events">Events List</string>
    <string name="submit_events">Submit Events</string>
    <string name="title_activity_new_event">NewEventActivity</string>

    <string name="show_new_event_name">Event Name</string>
    <string name="show_new_event_discription">Description</string>
    <string name="show_new_event_date">Event Date</string>
    <string name="show_new_event_begin">Begin Time</string>
    <string name="show_new_event_end">End Time</string>

    <string name="test">GO!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="showEvents">Show Events</string>
    <string name="eventTest">Show Events</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="events_enrolled">Enrolled Events</string>
    <string name="title_activity_members_list">MembersListActivity</string>
    <string name="membersListHeader">Friends Attending</string>

</resources>
