<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.sjsu.cmpe277.termproject.NewEventActivity">

    <TextView android:text="Please provide information of the event" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_events"
        android:id="@+id/button"
        android:layout_marginBottom="47dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_new_event_name"
        android:id="@+id/event_name_id"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_new_event_name"
        android:hint="Enter Event Name"
        android:layout_alignBottom="@+id/event_name_id"
        android:layout_alignStart="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_description"
        android:hint="Eneter Event Description"
        android:layout_below="@+id/input_new_event_name"
        android:layout_alignStart="@+id/input_new_event_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_event_date"
        android:layout_below="@+id/input_description"
        android:layout_alignStart="@+id/input_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_new_event_discription"
        android:id="@+id/textView_description"
        android:layout_above="@+id/editText_event_date"
        android:layout_alignEnd="@+id/event_name_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_new_event_date"
        android:id="@+id/textView_event_date"
        android:layout_alignBottom="@+id/editText_event_date"
        android:layout_alignEnd="@+id/textView_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_new_event_begin"
        android:id="@+id/textView_event_start_time"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView_event_date"
        android:layout_alignEnd="@+id/textView_event_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_new_event_end"
        android:id="@+id/textView_event_end_time"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/textView_event_start_time"
        android:layout_alignEnd="@+id/textView_event_start_time" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText_event_begin_time"
        android:layout_above="@+id/textView_event_end_time"
        android:layout_alignStart="@+id/editText_event_date" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText_event_end_time"
        android:layout_alignBottom="@+id/textView_event_end_time"
        android:layout_alignStart="@+id/editText_event_begin_time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/testtextView"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/editText_event_end_time" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/addfragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/testtextView"
        android:layout_alignStart="@+id/testtextView"
        android:layout_above="@+id/button"
        android:layout_marginTop="53dp"></LinearLayout>


</RelativeLayout>
